--- a/yehe_doc/计算和容器/云服务器/产品简介/实例/实例规格_intl_jp.html
+++ b/yehe_doc/计算和容器/云服务器/产品简介/实例/实例规格_intl_jp.html
@@ -44,6 +44,7 @@
 <td>
 <ul style="margin-bottom: 0;">
 	<li><a href="#M5">メモリ型M6</a> </li>
+	<li><a href="#M6ce">セキュリティ強化メモリ型M6ce</a> </li>
 	<li><a href="#M5">メモリ型M5</a> </li>
 	<li><a href="#MA2">メモリ型MA2</a> </li>
 	<li><a href="#M4">メモリ型M4</a> </li>
@@ -10785,6 +10786,345 @@
 <p>-</p>
 </div></div>
 </td>
+</tr>
+</tbody>
+</table></div></td>
+</tr>
+</tbody>
+</table>
+
+
+<li><a href="メモリ型インスタンスファミリー">セキュリティ強化メモリ型M6ce</a> </li>
+
+<table class="tableblock frame-none grid-all spread custom-style">
+<colgroup>
+<col style="width: 100%;">
+</colgroup>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><div><div class="sect2">
+<h3 id="S6メモリ型インスタンスファミリー">セキュリティ強化メモリ型M6ce</h3>
+<div class="paragraph">
+		<p>セキュリティ強化メモリ型M6ceインスタンスは、最新世代のメモリ型インスタンスで、全く新しい最適化された仮想化プラットフォームをベースとしています。メモリ内の大型データセットを処理するワークロードに高速で安定したパフォーマンスを提供することを目的としており、ハイメモリコンピューティングアプリケーションにとってベストな選択です。
+</p>
+<blockquote class="doc-tip"><p class="doc-tip-tit"><i class="doc-icon-tip"></i>説明：</p><p>このインスタンスタイプは、ホワイトリストに登録されたユーザーのみが利用できるようになりました。アカウントマネージャーに連絡して購入してください。</p>
+</blockquote>
+<div class="sect3">
+<h4 id="_ 特徴_8"> 特徴</h4> 
+<div class="ulist">
+<ul>
+<li><p>Tencent Cloudにより自社開発された新世代の双方向通信対応Star Lakeサーバーは、第3世代Intel® Xeon®と組み合わせてプロセッサを拡張可能です</p></li>
+<li><p>Intel® Xeon® Ice Lakeプロセッサ、クロック周波数2.7GHz、ターボブースト時3.3GHzを採用しています</p></li>
+<li><p>Intel® SGX暗号化計算をサポートし、単一インスタンスで最大428Gの暗号化メモリを搭載でき、主要なデータとコードのプライバシーとセキュリティを保障します</p></li>
+<li><p>プロセッサとメモリの比率は1：8で、メモリ内の暗号化メモリの占有率は約50%です</p></li>
+<li><p>同一サイズのメモリインスタンスの最低価格を実現</p></li>
+<li><p>インスタンスのネットワークパフォーマンスは、その仕様によって異なります。仕様が高いほど、ネットワーク転送パフォーマンスが向上し、プライベートネットワークの帯域幅の上限が高くなります</p></li>
+</ul>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_<div class="paragraph">ユースケース_8">ユースケース</h4>
+<div class="paragraph">
+<p>これらのインスタンスは次のシナリオに最も適しています。</p>
+</div>
+<div class="ulist">
+<ul>
+<li><p>データの共有と計算では、異なるユーザー間またはメーカー間の機密データ共有を保護可能</p></li>
+<li><p>ブロックチェーンアプリケーションでは、トランザクション、キーStorage等のプライバシーとセキュリティを強化可能</p></li>
+<li><p>高セキュリティ高信頼性が必要なケース、金融、政府機関、医療など</p></li>
+<li><p>コンフィデンシャル・コンピューティングのケース、データ暗号化アプリケーション</p></li>    
+</ul>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_インスタンス要件_8">インスタンス要件</h4>
+<div class="ulist">
+<ul>
+<li><p>M6ceインスタンスは従量課金インスタンスとして使用できます。</p></li>
+<li><p>VPCでのM6ceインスタンスの起動のみをサポートします。</p></li>
+<li><p>M6ceインスタンスは購入設定をサポートします。下記インスタンス仕様をご参照ください。</p></li>
+<blockquote class="doc-tip"><p class="doc-tip-tit"><i class="doc-icon-tip"></i>説明：</p><p>Intel SGX Enclaveでハードウェアとバインドされるキーストレージの暗号化データ（SGX Sealing等）を使用している場合、以下のケースではホストに変更が加えられると対応データを復号することができなくなります。アプリケーション層でデータバックアップを実行して、アプリケーションの信頼性を確保することをお勧めします。
+ホストに変更が加えられる可能性があるケース：ホストの故障、インスタンス仕様の調整、停止済みインスタンスの非課金化機能の使用、インスタンス設定グループの変更等。</p>
+</blockquote>
+<p>セキュリティ強化されたメモリ型M6ceインスタンスの使用方法に関する詳細情報は、[SGXコンフィデンシャル・コンピューティング環境の構築](https://intl.cloud.tencent.com/document/product/213/45510)をご参照ください。</p>
+</ul>
+</div>
+</div>
+<div class="sect3">
+<h4 id="__a_href_instancetype_ トップへ戻る_a_8">&nbsp; &nbsp;<a href="#INSTANCETYPE"> トップへ戻る</a></h4>
+</div>
+/div></div></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><div><div class="doc-table-wrap"><table class="tableblock frame-all grid-all spread">
+<colgroup>
+<col style="width: 20%;">
+<col style="width: 5%;">
+<col style="width: 10%;">
+<col style="width: 10%;">
+<col style="width: 10%;">
+<col style="width: 5%;">
+<col style="width: 10%;">
+<col style="width: 10%;">
+<col style="width: 15%;">
+<col style="width: 5%;">   
+</colgroup>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>仕様</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>vCPU</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>メモリ（GB）</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>コンフィデンシャルメモリを含む（GB）</p>
+/div></div></td>    
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>パケットの受信および転送（pps）（アウトバウンド+インバウンド）</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>接続数</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>キュー数</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>プライベートネットワーク帯域幅（Gbps）（アウトバウンド+インバウンド）</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>CPU周波数</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>備考</p>
+/div></div></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>M6ce.MEDIUM16</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>2</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>16</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>8</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>30万</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>25万</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>2</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>2</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>2.7/3.3GHz</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>-</p>
+/div></div></td>    
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>M6ce.LARGE32</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>4</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>32</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>16</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>60万</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>50万</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>4</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>4</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>2.7/3.3GHz</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>-</p>
+/div></div></td>    
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>M6ce.2XLARGE64</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>8</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>64</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>32</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>120万</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>100万</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>8</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>7</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>2.7/3.3GHz</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>-</p>
+/div></div></td>    
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>M6ce.4XLARGE128</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>16</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>128</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>64</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>250万</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>200万</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>16</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>13</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>2.7/3.3GHz</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>-</p>
+/div></div></td>    
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>M6ce.8XLARGE256</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>32</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>256</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>128</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>500万</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>400万</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>32</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>26</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>2.7/3.3GHz</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>-</p>
+/div></div></td>    
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>M6ce.31MEDIUM428</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>62</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>428</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>214</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>1000万</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>800万</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>48</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>50</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>2.7/3.3GHz</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>-</p>
+/div></div></td>    
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>M6ce.31XLARGE856</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>124</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>856</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>428</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>1900万</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>800万</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>48</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>100</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>2.7/3.3GHz</p>
+/div></div></td>
+<td class="tableblock halign-left valign-top"><div><div class="paragraph">
+<p>-</p>
+/div></div></td>
 </tr>
 </tbody>
 </table></div></td>
